--- a/news-bigdataproject/1、项目需求.md
+++ b/news-bigdataproject/1、项目需求.md
@@ -1,11 +1,6 @@
-﻿---
-title: 第一章：项目需求分析与设计
+﻿
+## 第一章：项目需求分析与设计
 date: 2018-12-19 11:52:11
-categories: "用户日志实时与离线分析系统" 
-tags: 
- - 项目
----
-
 ### 项目简介
 **目标**
 1、完成大数据项目的架构设计，安装部署，架构继承与开发、用户可视化交互设计
